text overflow fix

--- a/src/components/todo-list-item.css
+++ b/src/components/todo-list-item.css
@@ -27,3 +27,9 @@
     max-width: 260px;
     margin: 0 auto;
 }
+
+.text {
+    max-width: 160px;
+    word-wrap: break-word;
+    text-align: left;
+}
